<resources>
    <string name="app_name">Japon 2020</string>
    <string name="title_back">Vols</string>
    <string name="title_stats">Stats</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_stats">StatsActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>

    <string name="planned_holidays">Les vacances planifiées</string>
    <string name="plan_holiday">planifier votre voyage</string>
    <string name="started_at">Date de départ</string>
    <string name="ended_at">Date de retour</string>
    <string name="city_bordeaux">Bordeaux</string>
    <string name="city_paris">Paris</string>
    <string name="city_tokyo">Tokyo</string>
    <string name="city_osaka">Osaka</string>
    <string name="city_nagoya">Nagoya</string>
    <string name="flight_price_request">Voir les prix</string>
    <string name="step_flight">Les vols</string>
    <string name="origin_city">Départ de</string>
    <string name="destination_city">retour de</string>
    <string name="euro_price">%1$s €</string>
    <string name="duration">%1$s</string>
    <string name="price_per_pax_label">Prix/pers</string>
    <string name="going_flight_label">Aller</string>
    <string name="return_flight_label">Retour</string>
    <string name="travel_duration_label">Durée:</string>
    <string name="choose_fligh_date_label">Choisir cet A/R</string>
    <string name="close">Masquer</string>
    <string name="company_name">Compagnie: %1$s</string>
    <string name="highlighted_destination">%1$s, %2$s.</string>
    <string name="day_nb">Jour %1$d</string>
    <string name="day_date">Le %1$s</string>

    <string name="add">Ajouter</string>
    <string name="added_visit">Visite ajoutée</string>
    <string name="end_of_trip">Fin</string>
    <string name="budget">Budget</string>
    <string name="area">Région: %1$s</string>
    <string name="nearby_cities">Lieux proches: %1$s</string>
    <string name="price_per_pax">%1$.2f€/pers.</string>
    <string name="stay_over_added">Nuit prévue à %1$s</string>
    <string name="visits_label">Les visites</string>
    <string name="overnight_label">La nuit</string>
    <string name="budget_label">Budget en cours</string>
    <string name="patience_flights_warning">Patience le temps de trouver les vols&#8230;</string>

    <string name="flight_label">Vol:</string>
    <string name="flight_nb">Vol: %1$s</string>
    <string name="total_price_label">Prix total:</string>
    <string name="price">%1$s€</string>
    <string name="railpass_period">Valable du %1$s au %2$s</string>
    <string name="save_loading_msg">Mise à jour des stats de voyages</string>

</resources>
