<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.jbouffard.japan2020.View.MainActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/shojumaru"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/image_welcome"
        app:layout_constraintTop_toBottomOf="@id/guideline_animation" />

    <ImageView
        android:id="@+id/image_welcome"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="5dp"
        android:accessibilityLiveRegion="assertive"
        android:src="@drawable/ic_fuji_mountain"
        android:textAlignment="viewEnd"
        app:layout_constraintEnd_toStartOf="@id/welcome"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_animation" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_animation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="150dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/new_holiday_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/background_light"
        android:elevation="@dimen/cardview_default_elevation"
        android:fontFamily="@font/orienta"
        android:padding="40dp"
        android:text="@string/plan_holiday"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_btn" />

    <Button
        android:id="@+id/list_holidays_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/background_light"
        android:elevation="@dimen/cardview_default_elevation"
        android:fontFamily="@font/orienta"
        android:padding="40dp"
        android:text="@string/planned_holidays"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_holiday_button" />


</android.support.constraint.ConstraintLayout>
